<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.n0584052.whatsfortea.ShoppingListFragment"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/txtShoppingListQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/new_item_quantity"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtShoppingListItem"
        app:layout_constraintVertical_bias="0.481" />

    <EditText
        android:id="@+id/txtShoppingListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/new_shopping_list_item"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="375dp" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleShoppingList"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listView2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.347"></TextView>

    <ListView
        android:id="@+id/listView2"
        android:layout_width="354dp"
        android:layout_height="436dp"
        tools:layout_editor_absoluteY="63dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"></ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addToShoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@mipmap/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/addItemToShoppingList"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/listView2"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
